<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetFreshApplication</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Cart</string>
    <string name="title_section3">Promotions</string>
    <string name="title_section4">Settings</string>Settings
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="pref_key_username">KEY_USERNAME</string>
    <string name="pref_key_phone" >KEY_PHONE</string>
    <string name="pref_key_address">KEY_ADDRESS</string>
    <string name="pref_key_address_street">KEY_ADDRESS_STREET</string>
    <string name="pref_key_address_building">KEY_ADDRESS_BUILDING</string>
    <string name="pref_key_alt_name">KEY_ALT_NAME</string>
    <string name="pref_key_alt_address">KEY_ALT_ADDRESS</string>
    <string name="pref_key_alt_address_street">KEY_ALT_ADDRESS_STREET</string>
    <string name="pref_key_alt_address_building">KEY_ALT_ADDRESS_BUILDING</string>
    <string name="pref_key_pass">KEY_PASS</string>
    <string name="pref_key_inst_main">KEY_INST_MAIN</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="hello_world">Hello world!</string>



</resources>
